--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ body {
     display: flex; }
     .main-header__contacts p {
       font-size: 1.8rem; }
+      .main-header__contacts p a:link,
+      .main-header__contacts p a:visited {
+        text-decoration: none;
+        color: inherit; }
       .main-header__contacts p:not(:last-child) {
         margin-right: 1rem; }
     @media only screen and (max-width: 1100px) {
@@ -186,6 +190,9 @@ body {
   max-width: 120rem;
   margin: 0 auto;
   color: #646464; }
+  @media only screen and (max-width: 1080px) {
+    .section-water {
+      padding: 0 1.2rem; } }
 
 .section-title {
   margin: 2rem 0;
