--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
   height: 6.5rem;
   width: 100vw;
   padding: 0 3rem;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #d4d4d4;
   background-color: #ffffff;
   display: flex;
   align-items: center; }
@@ -167,7 +167,7 @@ body {
             margin-right: 1rem; } }
 
 @media only screen and (max-width: 1080px) {
-  main {
+  .section-water, .section-coffee, .section-others {
     padding: 0 1.2rem; } }
 
 .main-banner {
@@ -239,6 +239,9 @@ body {
   .water-item__info p {
     font-size: 2.4rem;
     color: #000; }
+    @media only screen and (max-width: 400px) {
+      .water-item__info p {
+        font-size: 2rem; } }
 
 .water-item__more-label {
   display: flex;
@@ -300,54 +303,115 @@ body {
     .water-item__desc-info span:last-child {
       margin-bottom: 1rem; }
 
-.section-coffee {
+.section-coffee, .section-others {
   max-width: 120rem;
   margin: 0 auto;
   margin-top: 4rem;
   margin-bottom: 4rem;
   color: #646464; }
 
-.coffee-list {
+.goods-list {
   list-style: none;
   margin-top: 2.5rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
   grid-gap: 1rem; }
-  .coffee-list__item {
+  .goods-list__item {
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden; }
 
-.coffee-item__figure {
+.goods-item__figure {
   background-color: #f1f1f1;
   padding: 1rem 0;
   overflow: hidden;
   height: 24rem; }
-  .coffee-item__figure img {
+  .goods-item__figure img {
     max-height: 100%;
     max-width: 100%;
     object-fit: cover;
     display: block;
     margin: 0 auto; }
 
-.coffee-item__info {
+.goods-item__info {
   display: grid;
   grid-template-columns: max-content 1fr;
   grid-template-rows: repeat(2, min-content); }
-  .coffee-item__info-title {
+  .goods-item__info-title {
     grid-column: 1 / 2;
     padding: 1rem;
     align-self: center;
     font-size: 1.8rem;
     color: #000; }
-  .coffee-item__info-price {
+  .goods-item__info-price {
     grid-column: 2 / 3;
     align-self: center;
     justify-self: end;
     padding-right: 1rem;
     font-size: 1.8rem;
     color: #000; }
-  .coffee-item__info-desc {
+    @media only screen and (max-width: 400px) {
+      .goods-item__info-price {
+        font-size: 1.6rem;
+        font-weight: 700; } }
+  .goods-item__info-desc {
     grid-column: 1 / 3;
     padding: 1rem;
     font-size: 1.6rem; }
+
+.main-footer {
+  border-top: 1px solid #d4d4d4;
+  padding: 3rem 10rem;
+  display: flex; }
+  @media only screen and (max-width: 800px) {
+    .main-footer {
+      flex-flow: column; } }
+  @media only screen and (max-width: 400px) {
+    .main-footer {
+      padding: 2rem 6rem; } }
+  .main-footer > * {
+    flex: 1; }
+  .main-footer__contacts {
+    color: #646464;
+    border-right: 1px solid #d4d4d4;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center; }
+    @media only screen and (max-width: 800px) {
+      .main-footer__contacts {
+        border-right: none;
+        border-bottom: 1px solid #d4d4d4;
+        padding-bottom: 2rem; } }
+    .main-footer__contacts p:not(:last-child) {
+      margin-bottom: 2rem; }
+    .main-footer__contacts a:link,
+    .main-footer__contacts a:visited {
+      color: inherit;
+      text-decoration: none;
+      font-size: 2rem;
+      transition: color .2s ease; }
+      .main-footer__contacts a:link:hover,
+      .main-footer__contacts a:visited:hover {
+        color: rgba(100, 100, 100, 0.8); }
+  .main-footer__branding {
+    color: #2c9fec;
+    display: flex;
+    flex-flow: column;
+    align-items: center; }
+    @media only screen and (max-width: 800px) {
+      .main-footer__branding {
+        padding-top: 1.5rem; } }
+    .main-footer__branding p {
+      font-size: 3rem;
+      font-weight: 700; }
+  .main-footer__links {
+    list-style: none;
+    display: flex; }
+    .main-footer__links > li {
+      margin: 2rem; }
+      .main-footer__links > li svg {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        fill: #2c9fec; }
